--- a/index.html
+++ b/index.html
@@ -25,56 +25,61 @@
         </section>
 
         <section id="math-tricks" class="math-tricks-area">
-            <div class="math-trick-title">
-                <h1>Math Tricks - 1</h1>
+            <div id="math-tricks-perentDiv" class="math-tricks-content">
+                <div class="math-trick-title">
+                    <h1>Math Tricks - 1</h1>
+                </div>
+                <div>
+                    <button id="start-btn" class="start-button btn btn-success">Start</button>
+                </div>
+                <div id="first-card" class="tricks-card">
+                    <h3>Step - 1</h3>
+                    <p>Think of any <span class="highlighter">number</span></p>
+                    <button id="step-btn1" class="card-btn btn btn-primary">Next</button>
+                </div>
+                <div id="second-card" class="tricks-card">
+                    <h3>Step - 2</h3>
+                    <p>Subtract <span class="highlighter">1</span> from the number you have thought of</p>
+                    <button id="step-btn2" class="card-btn btn btn-primary">Next</button>
+                </div>
+                <div id="third-card" class="tricks-card">
+                    <h3>Step - 3</h3>
+                    <p>Multiply that number by <span class="highlighter">3</span></p>
+                    <button id="step-btn3" class="card-btn btn btn-primary">Next</button>
+                </div>
+                <div id="fourth-card" class="tricks-card">
+                    <h3>Step - 4</h3>
+                    <p>Add <span class="highlighter">12</span></p>
+                    <button id="step-btn4" class="card-btn btn btn-primary">Next</button>
+                </div>
+                <div id="fifth-card" class="tricks-card">
+                    <h3>Step - 5</h3>
+                    <p>Divide that number by <span class="highlighter">3</span></p>
+                    <button id="step-btn5" class="card-btn btn btn-primary">Next</button>
+                </div>
+                <div id="sixth-card" class="tricks-card">
+                    <h3>Step - 6</h3>
+                    <p>Add <span class="highlighter">5</span></p>
+                    <button id="step-btn6" class="card-btn btn btn-primary">Next</button>
+                </div>
+                <div id="seventh-card" class="tricks-card">
+                    <h3>Step - 7</h3>
+                    <p>Subtract the <span class="highlighter">original number</span> you had</p>
+                    <button id="step-btn7" class="card-btn btn btn-primary">Next</button>
+                </div>
+                <div id="eight-card" class="tricks-card">
+                    <h3>Result</h3>
+                    <p>You have - <span class="highlighter">8</span></p>
+                    <button id="step-btn8" class="card-btn btn btn-primary">Next</button>
+                </div>
             </div>
-            <div class="tricks-card">
-                <h3>Step - 1</h3>
-                <p>Think of any number</p>
-                <button class="card-btn btn btn-primary">Next</button>
-            </div>
-            <div class="tricks-card">
-                <h3>Step - 2</h3>
-                <p>Subtract 1 from the number you have thought of</p>
-                <button class="card-btn btn btn-primary">Next</button>
-            </div>
-            <div class="tricks-card">
-                <h3>Step - 3</h3>
-                <p>Multiply that number by 3</p>
-                <button class="card-btn btn btn-primary">Next</button>
-            </div>
-            <div class="tricks-card">
-                <h3>Step - 4</h3>
-                <p>Add 12</p>
-                <button class="card-btn btn btn-primary">Next</button>
-            </div>
-            <div class="tricks-card">
-                <h3>Step - 5</h3>
-                <p>Divide that number by 3</p>
-                <button class="card-btn btn btn-primary">Next</button>
-            </div>
-            <div class="tricks-card">
-                <h3>Step - 6</h3>
-                <p>Add 5</p>
-                <button class="card-btn btn btn-primary">Next</button>
-            </div>
-            <div class="tricks-card">
-                <h3>Step - 7</h3>
-                <p>Subtract the original number you had</p>
-                <button class="card-btn btn btn-primary">Next</button>
-            </div>
-            <div class="tricks-card">
-                <h3>Result</h3>
-                <p>Result - 8</p>
-                <button class="card-btn btn btn-primary">Next</button>
-            </div>
-
-            
         </section>
 
         <section id="about" class="about-area">
 
         </section>
     </main>
+
+    <script src="app.js"></script>
 </body>
 </html>
