--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <img src="logo.png" alt="">
                 <h3>Math Tricks</h3>
                 <ul >
-                    <li><a href="#header">Home</a></li>
-                    <li><a href="#math-tricks">Math Tricks</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="#header">Home |</a></li>
+                    <li><a href="#math-tricks">Math Tricks |</a></li>
+                    <li><a href="#blog">Blog |</a></li>
+                    <li><a href="#about">About |</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">Blog</a></li>
                 </ul>
             </div>
         </section>
@@ -30,7 +30,7 @@
                     <h1>Math Tricks - 1</h1>
                 </div>
                 <div>
-                    <button id="start-btn" class="start-button btn btn-success">Start</button>
+                    <button id="start-btn" class="start-button">Start</button>
                 </div>
                 <div id="first-card" class="tricks-card">
                     <h3>Step - 1</h3>
@@ -75,7 +75,15 @@
             </div>
         </section>
 
+        <section id="blog" class="about-area">
+
+        </section>
+
         <section id="about" class="about-area">
+
+        </section>
+
+        <section id="contact" class="about-area">
 
         </section>
     </main>
